css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  box-sizing: border-box;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  font-family: sans-serif;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  margin: 0;
}

header {
  background-color: #e2e2e2;
}

h1 {
  text-align: center;
}

nav {
  text-align: center;
  padding: 0;
}

nav ul {
  padding: 0;
}

nav ul li {
  text-align: center;
  display: inline-block;
}

nav a {
  color: #0074d9;
  text-decoration: none;
}

nav a:hover {
  color: #fff;
  background-color: #0074d9;
}

@media only screen and (min-width: 38em) {

  h1 {
    text-align: center;
  }

  nav {
    text-align: right;
  }

}

